// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component should apply values from theme 1`] = `
<View
  replaceTheme={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 0,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
  updateTheme={[Function]}
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "color": "#43484d",
            "fontSize": 17.5,
            "fontWeight": "bold",
            "marginBottom": 15,
            "textAlign": "center",
          }
        }
        testID="cardTitle"
      >
        Yea b
      </Text>
      <View
        replaceTheme={[Function]}
        style={
          Object {
            "backgroundColor": "#bcbbc1",
            "height": 0.5,
            "marginBottom": 15,
          }
        }
        updateTheme={[Function]}
      />
    </View>
  </View>
</View>
`;

exports[`Card Component should have Card title with image 1`] = `
<View
  style={
    Object {
      "backgroundColor": "red",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 0,
      "padding": 0,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View>
      <Themed.CardTitle
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        HELLO WORLD
      </Themed.CardTitle>
    </View>
    <View>
      <Themed.CardImage
        source={
          Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          }
        }
      />
      <View
        style={
          Object {
            "padding": 10,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Card Component should have Card title without image 1`] = `
<View
  style={
    Object {
      "backgroundColor": "red",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 0,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View>
      <Themed.CardTitle
        style={Object {}}
      >
        Card Title
      </Themed.CardTitle>
      <Themed.CardDivider
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Card Component should have Card with featured title 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 0,
      "padding": 0,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "red",
      }
    }
  >
    <View>
      <Themed.CardTitle
        style={Object {}}
      >
        foo title
      </Themed.CardTitle>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "red",
        }
      }
    >
      <Themed.CardImage
        source={
          Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          }
        }
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        <View>
          <Themed.CardFeaturedTitle
            style={
              Object {
                "backgroundColor": "red",
              }
            }
          >
            featured title
          </Themed.CardFeaturedTitle>
          <Themed.CardFeaturedSubtitle
            style={
              Object {
                "backgroundColor": "red",
              }
            }
          >
            featured sub title
          </Themed.CardFeaturedSubtitle>
        </View>
      </Themed.CardImage>
      <View
        style={
          Object {
            "backgroundColor": "red",
            "padding": 10,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Card Component should have custom component as title 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 0,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <Component
      allowFontScaling={true}
      rejectResponderTermination={true}
      underlineColorAndroid="transparent"
    />
  </View>
</View>
`;

exports[`Card Component should render without issues 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 0,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  />
</View>
`;
